--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://chuanusa.github.io/GH02Day",
   "private": true,
   "version": "0.0.0",
   "type": "module",
